# HUST-OS-Course-Design

./: .gitignore  CMakeLists.txt  README.md
Assignments/: assignments.ppt
PartI-Linux_basics/: copy.c  demo.c  fork_demo.c
PartII-Syscall/: README.md  install.sh  sys.c  syscall_64.tbl  testcall.c  testcp.c  teststr.c
PartIII-Device_driver/: README.md  testdev.c
PartIII-Device_driver/zxcpyp_dev/: Makefile  zxcpyp_dev.c  zxcpyp_dev.mod.c
PartIV-System_monitor/: README.md  main.c  sysmonitor.c  sysmonitor.h
PartV-File_system_simulation/: filesystem.c  filesystem.h  fs_error.h  main.c  zxcpyp_exec.h  zxcpyp_prompt.h
lib/: CMakeLists.txt  systemV_ipc.h  zxcpyp_err.h  zxcpyp_sem.c  zxcpyp_sem.h  zxcpyp_sys.h
zxcpyplib/: CMakeLists.txt  zxcpyp_err.c
